# bookshelf

./: .doxygen  .gitignore  CMakeLists.txt  readme.md
demo/: demo.c
include/utils/: clargs.h  free_handler.h  hash.h  hashtable.h  linked_list.h
src/utils/: clargs.c  hash.c  hashtable.c  hashtable_internal.h  linked_list.c
test/: main.c
test/utils/: clargs_test.c  hashtable_test.c  linked_list_test.c
